Fix header layout, remove redundant scripts, and clean up remaining inline styles

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
-<div class="page-content-wrapper" style="padding-top: 100px;">
+<div class="page-container">
   {{ content }}
 </div> 
+ 
