--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,30 +1,51 @@
-.site-nav {
+.site-title {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  line-height: 1.2;
   
-  .page-link {
-    font-weight: 600;
-    margin-left: 25px;
-    position: relative;
-    color: #FAFAF7;
-    
-    &:after {
-      content: '';
-      position: absolute;
-      width: 0;
-      height: 2px;
-      display: block;
-      margin-top: 2px;
-      right: 0;
-      background: $secondary-color;
-      transition: width 0.3s ease;
-    }
-    
-    &:hover {
-      color: $secondary-color;
+  .title-name {
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: $secondary-color;
+  }
+  
+  .site-subtitle {
+    font-size: 0.85rem;
+    font-weight: 500;
+    color: $manilla;
+  }
+}
+
+.main-navigation {
+  .navigation-list {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 1.5rem;
+
+    li a {
+      font-weight: 600;
+      color: $text-light;
+      position: relative;
+      padding: 0.5rem 0;
+      
       &:after {
-        width: 100%;
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 2px;
+        bottom: 0;
         left: 0;
+        background: $secondary-color;
+        transition: width 0.3s ease;
+      }
+      
+      &:hover, &.active {
+        color: $secondary-color;
+        &:after {
+          width: 100%;
+        }
       }
     }
   }
@@ -36,9 +57,29 @@
   background: transparent;
   border: none;
   cursor: pointer;
-  color: white;
-  font-size: 1.5rem;
+  padding: 5px;
+  z-index: 1100;
   
+  span {
+    display: block;
+    width: 25px;
+    height: 2px;
+    margin-bottom: 5px;
+    background-color: $secondary-color;
+    border-radius: 2px;
+    transition: all 0.3s ease;
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  &.active {
+    span:nth-child(1) { transform: rotate(45deg) translate(5px, 5px); }
+    span:nth-child(2) { opacity: 0; }
+    span:nth-child(3) { transform: rotate(-45deg) translate(5px, -5px); }
+  }
+
   @media (max-width: 768px) {
     display: block;
   }
@@ -49,12 +90,11 @@
     position: fixed;
     top: 0;
     right: -100%;
-    width: 80%;
-    max-width: 300px;
+    width: 280px;
     height: 100vh;
     background-color: $primary-color;
     box-shadow: -5px 0 15px rgba(0, 0, 0, 0.5);
-    padding: 70px 20px 20px;
+    padding: 80px 2rem 2rem;
     transition: right 0.3s ease;
     z-index: 1000;
     
@@ -62,14 +102,17 @@
       right: 0;
     }
     
-    ul {
-      list-style: none;
-      padding: 0;
+    .navigation-list {
+      flex-direction: column;
+      gap: 1rem;
+      
       li a {
         display: block;
         padding: 1rem 0;
-        color: white;
+        font-size: 1.2rem;
         border-bottom: 1px solid rgba(255,255,255,0.1);
+        
+        &:after { display: none; }
       }
     }
   }
