--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,28 +3,14 @@ layout: default
 ---
 
 <div class="blog-post-container">
-  <header class="post-header">
-    <div class="wrapper">
-      <a href="/blog" class="back-to-blog-btn">
-        <i class="fas fa-arrow-left"></i> Back to Blog
-      </a>
-      <h1 class="post-title">{{ page.title }}</h1>
-      <p class="post-meta">
-        <time datetime="{{ page.date | date_to_xmlschema }}">
-          {{ page.date | date: "%B %-d, %Y" }}
-        </time>
-        {%- if page.author -%}
-          • {{ page.author }}
-        {%- endif -%}
-      </p>
-    </div>
-  </header>
-
   <section class="blog-section">
     <div class="wrapper">
       <article class="post">
         <header class="post-header">
-          <h1 class="post-title" style="color: var(--secondary);">{{ page.title }}</h1>
+          <a href="/blog" class="back-to-blog-btn" style="margin-bottom: 2rem;">
+            <i class="fas fa-arrow-left"></i> Back to Blog
+          </a>
+          <h1 class="post-title">{{ page.title }}</h1>
           <div class="post-meta">
             <span class="post-date">
               <i class="far fa-calendar-alt"></i> {{ page.date | date: "%B %-d, %Y" }}
@@ -45,9 +31,9 @@ layout: default
           </div>
           
           {% if page.tags.size > 0 %}
-          <div class="post-tags">
+          <div class="post-tags" style="margin-top: 1rem;">
             {% for tag in page.tags %}
-            <span class="blog-tag">{{ tag }}</span>
+            <span class="skill-tag">{{ tag }}</span>
             {% endfor %}
           </div>
           {% endif %}
