--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -32,7 +32,9 @@
 $primary-color: #191919;
 $primary-dark: #000000;
 $secondary-color: #CC785C;
+$secondary-dark: #B46A51;
 $accent-color: #D4A27F;
+$accent-light: #EBDBBC;
 $text-color: #191919;
 $text-light: #FAFAF7;
 $text-medium: #91918D;
