--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -34,6 +34,10 @@
     gap: 2rem;
     align-items: center;
 
+    @media (max-width: 991px) {
+      gap: 1.25rem;
+    }
+
     li a {
       font-weight: 600;
       color: $text-light;
