--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
+<div class="nav-overlay"></div>
+
 <header class="site-header">
   <div class="wrapper">
     <div class="header-container">
@@ -26,4 +28,4 @@
       </nav>
     </div>
   </div>
-</header> 
+</header>
