--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,6 +7,14 @@ body {
   transition: all 0.3s ease;
   overflow-x: hidden;
   margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  
+  &.menu-open {
+    @media (max-width: 768px) {
+      overflow: hidden;
+    }
+  }
 }
 
 * {
@@ -61,6 +69,12 @@ h3 {
 }
 
 p {
+  margin-bottom: 1.5rem;
+  line-height: 1.7;
+}
+
+ul, ol {
+  line-height: 1.7;
   margin-bottom: 1.5rem;
 }
 
