--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -58,7 +58,7 @@
     h3 {
       font-size: 1.3rem;
       margin-bottom: 1.5rem;
-      color: #FFFFFF;
+      color: $text-light;
       position: relative;
       padding-bottom: 0.75rem;
       
@@ -74,11 +74,17 @@
     }
     
     p, ul li {
-      color: #FFFFFF;
+      color: $text-light;
+    }
+    
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
     }
     
     a {
-      color: #FFFFFF;
+      color: $text-light;
       &:hover {
         color: $accent-color;
       }
@@ -90,7 +96,7 @@
     padding-top: 2rem;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     font-size: 0.9rem;
-    color: #FFFFFF;
+    color: $text-light;
   }
 }
 
@@ -135,7 +141,7 @@
       transform: translateX(-50%);
     }
   }
-  p { font-size: 1.2rem; color: #4A3B30; max-width: 700px; margin: 0 auto; }
+  p { font-size: 1.2rem; color: $text-color; opacity: 0.8; max-width: 700px; margin: 0 auto; }
 }
 
 /* Grids */
