--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -134,7 +134,7 @@
   font-size: 3rem;
   margin-bottom: 1.5rem;
   line-height: 1.2;
-  color: $primary-color;
+  color: $secondary-color;
 }
 
 .post-meta {
