--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,11 +3,11 @@
     <div class="footer-container">
       <div class="footer-widget">
         <h3>About Me</h3>
-        <p>{{ site.description }}</p>
+        <p>Computer Science student at Virginia Commonwealth University specializing in Artificial Intelligence, with a focus on LLMs and RAG systems.</p>
         <div class="footer-social">
-          <a href="https://github.com/{{ site.github_username }}" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
-          <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
-          <a href="https://huggingface.co/{{ site.social_links.huggingface }}" target="_blank" class="social-icon"><i class="fas fa-robot"></i></a>
+          <a href="https://github.com/RFlash007" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/ianjcmullins" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
+          <a href="https://huggingface.co/RFlash" target="_blank" class="social-icon"><i class="fas fa-robot"></i></a>
         </div>
       </div>
       
@@ -17,7 +17,6 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/projects">Projects</a></li>
-          <li><a href="/blog">Blog</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
       </div>
@@ -25,14 +24,14 @@
       <div class="footer-widget">
         <h3>Contact</h3>
         <ul>
-          <li><i class="fas fa-envelope"></i> <a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><i class="fas fa-envelope"></i> <a href="mailto:mullinsij@vcu.edu">mullinsij@vcu.edu</a></li>
           <li><i class="fas fa-map-marker-alt"></i> Mechanicsville, VA</li>
         </ul>
       </div>
     </div>
     
     <div class="footer-bottom">
-      <p>&copy; {{ site.time | date: '%Y' }} {{ site.author }}. All rights reserved.</p>
+      <p>&copy; {{ site.time | date: '%Y' }} Ian Mullins. All rights reserved.</p>
     </div>
   </div>
-</footer>
+</footer> 
