--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-<div class="page-container">
+<div class="page-content-wrapper" style="padding-top: 100px;">
   {{ content }}
 </div> 
- 
