--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,12 @@
-<div class="nav-overlay"></div>
-
 <header class="site-header">
   <div class="wrapper">
     <div class="header-container">
       <a href="/" class="site-title">
-        <div class="name-wrapper">
-          <span class="title-name">Ian Mullins</span>
-        </div>
+        <span class="title-name">Ian Mullins</span>
         <span class="site-subtitle">Computer Science Student</span>
       </a>
       
-      <button class="navbar-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
+      <button class="navbar-toggle" aria-label="Toggle navigation menu">
         <span></span>
         <span></span>
         <span></span>
